<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kylemsguy.tcasmobile.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/questionText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <Button
        android:id="@+id/btnSkipPerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSkipTemp"
        android:layout_alignRight="@+id/questionText"
        android:layout_alignTop="@+id/btnSkipTemp"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/btnSkipTemp"
        android:text="@string/skip_perm"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSkipTemp"
        android:layout_alignRight="@+id/btnSkipPerm"
        android:layout_below="@+id/btnSkipTemp"
        android:layout_marginTop="14dp"
        android:text="@string/answer" />

    <Button
        android:id="@+id/btnSkipTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionText"
        android:layout_below="@+id/questionText"
        android:layout_marginTop="92dp"
        android:text="@string/skip_temp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/answerField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSubmit"
        android:layout_alignRight="@+id/btnSubmit"
        android:layout_below="@+id/btnSubmit"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:text="@string/response_prompt"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>