<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kylemsguy.tcasmobile.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/textAreaScroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idLinearLayout"
        android:layout_below="@id/top_action_bar"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/questionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:text="@string/start_answering_prompt" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/idLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSkipPerm"
        android:layout_alignLeft="@+id/textAreaScroller" >

        <TextView
            android:id="@+id/questionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_press_skip" />
    </LinearLayout>

    <EditText
        android:id="@+id/answerField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnSkipPerm"
        android:ems="10"
        android:hint="@string/response_prompt"
        android:inputType="textMultiLine|textCapWords" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerField"
        android:layout_alignLeft="@+id/btnSkipTemp"
        android:layout_alignRight="@+id/btnSkipPerm"
        android:onClick="submitAnswer"
        android:text="@string/start_answering" />

    <Button
        android:id="@+id/btnSkipPerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:layout_alignRight="@+id/textAreaScroller"
        android:layout_marginBottom="18dp"
        android:onClick="skipPerm"
        android:text="@string/skip_perm"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSkipTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idLinearLayout"
        android:layout_below="@+id/idLinearLayout"
        android:layout_toLeftOf="@+id/btnSkipPerm"
        android:onClick="skipTemp"
        android:text="@string/skip_temp"
        android:textSize="15sp" />

</RelativeLayout>